# ExtractMSLesion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: ExtractMSLesion.cmake.in
clusterpost-ants/: index.js  package.json
doc/deepLearningClass/: article.tex  report.bib
doc/deepLearningClass/images/: convert.sh
py/: autoencoder.py  autoencoderMin.py  autoencoder_eval.py  autoencoder_nn.py  autoencoder_train.py  convolution.py  convolution2d.py  labelStats.py  plot_kmeans_digits.py  plot_kmeans_wm_ms.py  plot_separating_hyperplane.py  readImages.py  readImagesAutoEncoder.py  readImagesSamples.py  readImagesSamplesSplit.py  regularization.py  regularization_conv_eval.py  regularization_conv_nn.py  regularization_conv_train.py  regularization_eval.py  regularization_nn.py  regularization_train.py  sgd_fit_ms_wm.py
py/cnnDice/: neuralnetwork.py  runTraining.py
sh/: CMakeLists.txt  extractAll.sh  extractLabels.sh
src/: CMakeLists.txt  castVectorImage.cxx  castVectorImage.xml  createHistogram.cxx  createHistogram.xml  evaluateFrequencyMap.cxx  evaluateFrequencyMap.xml  extractMSLesion.cxx  extractMSLesion.xml  msLesionEvaluate.cxx  msLesionEvaluate.xml  msLesionStats.cxx  msLesionStats.xml  replaceImageHeader.cxx  replaceImageHeader.xml  splitImage.xml
submit/: ants.js  antsApplyTransforms.js  convolution.js  delete.txt  deleteJobs.js  getJobs.js  index.js  login.js  package.json  plot_kmeans.js
